--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@ APP_ENV=local
 APP_KEY=base64:SeNV6CwqQD3DRk2DBpQrZheyHqbGkZdyLc1ZSFgZh10=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=http://35.196.43.156/
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=35.202.178.58
 DB_PORT=3306
 DB_DATABASE=gerenciador_treino
 DB_USERNAME=root
